# guitar-tuner

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  aubio-benchmark-results.md  pesto-benchmark-results.md  pesto-integration.md
.github/workflows/: release.yml
eval/: fitAndShowErrorProbabilityModels.py  highPassFilter.py  lowPassFilter.py  lowPighPassFilter.py  masking.py  peakCensus.py  peakCensusFindings.md  peakCensusTolerance.py  showFrequencyEstimates.py  showHistogram.py  showOneAnalysis.py  showOneAutocorrelation.py  showOnsetDetectionHistograms.py  showPitchDetectorImplTestResults.py  showRoc.py  showWindowSpectrum.py  upsampling_factor.py
eval/BenchmarkingOutput/: AUC.txt  AUC_aubio-specacf.txt  AUC_aubio-yin.txt  AUC_aubio-yinfast.txt  AUC_aubio-yinfft.txt  FNR.txt  FNR_aubio-mcomb.txt  FNR_aubio-schmitt.txt  FNR_aubio-specacf.txt  FNR_aubio-yin.txt  FNR_aubio-yinfast.txt  FNR_aubio-yinfft.txt  RMS_error.txt  RMS_error_aubio-fcomb.txt  RMS_error_aubio-mcomb.txt  RMS_error_aubio-schmitt.txt  RMS_error_aubio-specacf.txt  RMS_error_aubio-yin.txt  RMS_error_aubio-yinfast.txt  RMS_error_aubio-yinfft.txt  threshold.txt
eval/testFiles/notes/: e4.txt  g3.txt
eval/testFiles/notes/Admira_Classic/: A2.txt  B3.txt  D3.txt  E2.txt  E4.txt  G3.txt
eval/testFiles/notes/CS_Telecaster_amp/iPhone_11/: A2.txt  B3.txt  D3.txt  E2.txt  E4.txt  G3.txt
eval/testFiles/notes/CS_Telecaster_unplugged/iPhone_11/: A2.txt  B3.txt  D3.txt  E2.txt  E4.txt  G3.txt
eval/testFiles/notes/Fender_(Acoustic)/iPhone_17/: A2.txt  B3.txt  D3.txt  E2.txt  E4.txt
eval/testFiles/notes/Fender_Stratocaster_amp/iPhone_11/: A2.txt  B3.txt  D3.txt  E2.txt  E4.txt  G3.txt
eval/testFiles/notes/Fender_Stratocaster_unplugged/iPhone_11/: A2.txt  B3.txt  D3.txt  E2.txt  E4.txt  G3.txt
eval/testFiles/notes/Gibson_SG_unplugged/Google_Pixel_7/: A2.txt  B3.txt  D3.txt  E2.txt  E4.txt  G3.txt
eval/testFiles/notes/Grand_Acoustic/iPhone_7/: A2.txt  B3.txt  D3.txt  E2.txt  E4.txt  G3.txt
eval/testFiles/notes/Music_Man_JP_6_amp/iPhone_7/: D3.txt  E2.txt  E4.txt  G3.txt
eval/testFiles/notes/Schecter_electric_unplugged/: A2.txt  B3.txt  D3.txt  E2.txt  E4.txt  G3.txt
eval/testFiles/notes/Strandberg_unplugged/Nothing_Phone_2a/: A2.txt  B3.txt  E2.txt  E4.txt  G3.txt
eval/testFiles/notes/Takamine_Acoustic/Google_Pixel_7/: A2.txt  B3.txt  D3.txt  E2.txt  E4.txt  G3.txt
eval/testFiles/notes/TunerSamples/: a2_45.txt  b3.txt  d3.txt  e2.txt  e4.txt  g3.txt
eval/testFiles/notes/Yamaha FSX-800/Android Xiaomi POCO M5/: A2.txt  E4.txt
eval/testFiles/notes/Yamaha FSX-800/iPhone 12/: A2.txt  B3.txt  D3.txt  G3.txt
eval/testFiles/notes/Yamaha_2_Acoustic/Nothing_Phone_2a/: A2.txt  D3.txt  E2.txt  E4.txt  G3.txt
eval/testFiles/notes/Yamaha_Acoustic/iPhone_11/: A2.txt  B3.txt  D3.txt  E2.txt  E4.txt  G3.txt
eval/testFiles/notes/Yamaha_FSX-800/Android_Xiaomi_POCO_M5/: B3.txt  D3.txt  G3.txt
eval/testFiles/notes/Yamaha_FSX-800/iPhone_12/: E2.txt  E4.txt
eval/testFiles/notes/debug/: A3.txt  a2.txt  e2.txt
eval/testFiles/notes/debug/Alex_Feb_2/: g3.txt
eval/testFiles/notes/guitar_1/: a2.txt  b3.txt  d3.txt  e2.txt  e4.txt  g3.txt
saint/: .clang-format  CMakeLists.txt
saint/PitchDetector/: AutocorrEstimateDisambiguator.cpp  AutocorrEstimateDisambiguator.h  AutocorrPitchDetector.cpp  AutocorrPitchDetector.h  ButterworthFilter.h  CMakeLists.txt  Cepstrum.cpp  Cepstrum.h  DummyFormantShifterLogger.cpp  DummyFormantShifterLogger.h  DummyPitchDetectorLogger.cpp  DummyPitchDetectorLogger.h  FIRFilter.h  FixedBlockPitchDetector.h  FormantShifterLogger.cpp  FormantShifterLogger.h  FormantShifterLoggerInterface.h  FrequencyDomainTransformer.cpp  FrequencyDomainTransformer.h  HighPassFilter.h  OnsetDetector.cpp  OnsetDetector.h  PitchDetectionSmoother.cpp  PitchDetectionSmoother.h  PitchDetector.h  PitchDetectorFactory.cpp  PitchDetectorFactory.h  PitchDetectorImpl.cpp  PitchDetectorImpl.h  PitchDetectorImplTests.cpp  PitchDetectorLoggerInterface.h  PitchDetectorMedianFilter.cpp  PitchDetectorMedianFilter.h  PitchDetectorTypes.h  PitchDetectorUtils.cpp  PitchDetectorUtils.h  Preprocessor.cpp  Preprocessor.h  RealFft.h  ReblockingPitchDetector.cpp  (+6 more)
saint/PitchDetector/Aubio/: AubioPitchDetector.cpp  AubioPitchDetector.h  CMakeLists.txt
saint/PitchDetector/Pesto/: CMakeLists.txt  PestoPitchDetector.cpp  PestoPitchDetector.h
saint/PitchDetector/Recording/: IRecordingListener.h  IssueReportingPitchDetector.cpp  IssueReportingPitchDetector.h  PitchDetectorRecording.cpp  PitchDetectorRecording.h  RecordingPitchDetector.cpp  RecordingPitchDetector.h  ReplayPitchDetector.cpp  ReplayPitchDetector.h
saint/PitchDetector/Test/: AutocorrPeakCensusTests.cpp  BenchmarkAlgorithms.cpp  BenchmarkAlgorithms.h  CMakeLists.txt  OnsetDetectorCalibrationTests.cpp  PitchDetectorImplTestWrapper.cpp  PitchDetectorImplTestWrapper.h  PitchDetectorImplTests.cpp  PitchDetectorLogVisualization.py  PreprocessorTests.cpp  README.md  RecordingPitchDetectorTests.cpp  TestCaseUtils.h  UpsamplerTests.cpp
saint/TestApp/: AlsaAudioInput.cpp  AlsaAudioInput.h  AudioInput.h  CMakeLists.txt  CoreAudioInput.cpp  CoreAudioInput.h  TunerDisplay.cpp  TunerDisplay.h  main.cpp  replayMain.cpp
saint/TestUtils/: CMakeLists.txt  FormantShifterLogger.cpp  FormantShifterLogger.h  PitchDetectorDebugCb.h  PitchDetectorLogger.cpp  PitchDetectorLogger.h  testUtils.cpp  testUtils.h
saint/Utils/: CMakeLists.txt  CommonTypes.cpp  CommonTypes.h  Utils.cpp  Utils.h  UtilsTests.cpp
